# IssueClassifier

./: .gitignore  Dockerfile  New Text Document.txt  README.md  hortlog -sne  newReadme.md  pyproject.toml  vectorizer.vz
AlyClassificationService/: main.py
AlyVektorrizerService/: main.py
auswertungen/: newAntmap.txt  newAntmap_api-bug.txt  newAntmap_bug-enhancement.txt  newAntmap_doku-bug.txt  newAntmap_enhancement-bug.txt  newWrongClassifiedDocuments_api-bug.json  newWrongClassifiedDocuments_bug-enhancement.json  newWrongClassifiedDocuments_doku-api.json  newWrongClassifiedDocuments_doku-bug.json  newWrongClassifiedDocuments_enhancement-bug.json
classifier/: ClassificationTree.py  Dockerfile  LabelClassifier.py  TrainingConfig.txt  aly_function.py  ansible_awx_api.json  antMap.txt  classification_tree.py  configuration.py  fileManipulation.py  file_manipulation.py  label_classifier.py  loadClassifier.py  loadConfig.json  loadData.py  loadDataAntmap.py  load_classifier.py  load_config.json  load_data.py  load_data_antmap.py  manualDocumentCleaning.py  new_antmap_doku-bug.txt  pyproject.toml  requirements.txt  tmp.py  train.py  vectorizer.py  wrongClassified.json
classifier_docu/: configuration.html  file_manipulation.html  index.html  load_classifier.html  load_data.html  train.html
classifier_doku/: classification_tree.html  index.html  label_classifier.html  load_data.html  load_data_antmap.html  train.html  vectorizer.html
crawlerTool/: autocomplete.js  (+2 more)
issue_classifier/: pyproject.toml
issue_classifier/issue_classifier/: train.py
issue_classifier/issue_classifier/issue_data_methods/: file_manipulation.py  load_data.py  load_data_antmap.py
issue_classifier/issue_classifier/label_classifier/: label_classifier.py
issue_classifier/issue_classifier/vectorizer/: vectorizer.py
issue_classifier/tests/: test_issue_classifier.py
microservice/: .dockerignore  Dockerfile  README.md  celery_app.py  docker-compose-dev.yaml  docker-compose.yaml  main.py  pyproject.toml  test_issue_producer.py
microservice/classifier/: main.py
microservice/entrypoints/: celery_classifier.sh  celery_doku_enhancement.sh  celery_vectoriser.sh  main.sh
microservice/envs/: .dev.env  .prod.env
microservice/issues/: test_producer.py
microservice/microservice/: celery_app.py  main.py  test_issue_producer.py
microservice/microservice/classifier/: classification_tree.py  configuration.py  load_classifier.py  load_config.json  main.py
microservice/microservice/classifier/trained_classifiers/: ensembleClassifier_api-bug.joblib.pkl  ensembleClassifier_api-enhancement.joblib.pkl  ensembleClassifier_bug-enhancement.joblib.pkl  ensembleClassifier_doku-api-bug.joblib.pkl  ensembleClassifier_doku-api-enhancement.joblib.pkl  ensembleClassifier_doku-enhancement.joblib.pkl
microservice/microservice/classifier_celery/: helper_functions.py  task_classes.py  tasks.py
microservice/microservice/config/: celery_config.py  celeryconfig.py  classifier_configuration.py  load_classifier.py  load_config.json
microservice/microservice/models/: models.py
microservice/microservice/ms_celery/: celery.py  classifier_tree.py  task_classes.py  tasks.py
microservice/microservice/trained_classifiers/: vectoriser.vz  voting_classifier
microservice/microservice/tree_logic/: classifier_tree.py
microservice/microservice/vectoriser/: main.py
microservice/scripts/: entrypoint_classifier.sh  entrypoint_main.sh  entrypoint_vectoriser.sh
microservice/tests/: test_producer.py
microservice/vectoriser/: main.py
microservice/vectorizer/: main.py
web_server/: Dockerfile  entrypoint.sh  pyproject.toml
web_server/src/: schemas.py  server.py
web_server/web_server/: celery.py  models.py  server.py  server_methods.py
web_server/web_server/ws_helpers/: ws_models.py  ws_parser.py  ws_pika.py
(+108 files in other folders)
