[tool.poetry]
name = "issue-classifier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
joblib = "^0.17.0"
matplotlib = "^3.3.2"
nltk = "^3.5"
numpy = "^1.19.3"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
data-science-types = "^0.2.19"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
