[tool.poetry]
name = "issue_classifier"
version = "0.1.0"
description = ""
authors = ["Aly Mohamed <st159580@stud.uni-stuttgart.de>"]

[tool.poetry.dependencies]
python = "^3.8"
joblib = "^0.16.0"
numpy = "^1.19.2"
matplotlib = "^3.3.2"
pandas = "^1.1.2"
seaborn = "^0.11.0"
sklearn = "^0.0"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
