[tool.poetry]
name = "web_server"
version = "0.1.0"
description = ""
authors = ["Aly Mohamed <st159580@stud.uni-stuttgart.de>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
ujson = "^3.2.0"
celery = {extras = ["redis"], version = "^4.4.7"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry=1.0.10"]
build-backend = "poetry.masonry.api"
