[tool.poetry]
name = "web_server"
version = "0.1.0"
description = "Issue Classifier API - Flask w/ MQTT"
authors = ["Aly Mohamed <st159580@stud.uni-stuttgart.de>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
werkzeug = "^1.0.1"
flask-mqtt = "^1.1.1"
marshmallow = "^3.8.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
