[tool.poetry]
name = "web_server"
version = "0.1.0"
description = ""
authors = ["Aly Mohamed <st159580@stud.uni-stuttgart.de>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pydantic = "^1.6.1"
flask-mqtt = "^1.1.1"
pika = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
